[gd_scene load_steps=15 format=3 uid="uid://canxsrev0p8s"]

[ext_resource type="Script" path="res://Scripts/Enemy/Jelly.gd" id="1_i0x7n"]
[ext_resource type="Texture2D" uid="uid://cxxrt3lsf5gag" path="res://EnemySprites/1/Walk.png" id="2_1pb5n"]
[ext_resource type="Texture2D" uid="uid://cm5tsat3c407g" path="res://EnemySprites/1/Hurt.png" id="3_2j46g"]
[ext_resource type="PackedScene" uid="uid://crglj4k7iooai" path="res://soft_collision.tscn" id="4_rknvp"]
[ext_resource type="Script" path="res://Scenes/JellyHitBox.gd" id="4_ws4rs"]

[sub_resource type="Animation" id="Animation_2afxd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_1pb5n")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_yscjb"]
resource_name = "hurt"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_2j46g")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_qqewg"]
resource_name = "swimming"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_1pb5n")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0jgm3"]
_data = {
"RESET": SubResource("Animation_2afxd"),
"hurt": SubResource("Animation_yscjb"),
"swimming": SubResource("Animation_qqewg")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_tjoak"]
radius = 7.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xt88c"]
radius = 11.8125
height = 32.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_c1aht"]
radius = 8.0
height = 44.0269

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1fo3y"]
bg_color = Color(0.152941, 0.168627, 0.188235, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_21cx0"]
bg_color = Color(0.8, 0.388235, 0.372549, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="Jelly" type="CharacterBody2D"]
script = ExtResource("1_i0x7n")

[node name="JellyfishSprite" type="Sprite2D" parent="."]
position = Vector2(-1, 7)
scale = Vector2(1.61108, 1.29687)
texture = ExtResource("2_1pb5n")
hframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../JellyfishSprite")
libraries = {
"": SubResource("AnimationLibrary_0jgm3")
}
autoplay = "swimming"
speed_scale = 0.494

[node name="SoftCollision" parent="." instance=ExtResource("4_rknvp")]

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
shape = SubResource("CircleShape2D_tjoak")

[node name="JellyHurtBox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 160
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="JellyHurtBox"]
light_mask = 4
visibility_layer = 2
rotation = 1.5708
scale = Vector2(0.5, 0.5)
shape = SubResource("CapsuleShape2D_xt88c")

[node name="JellyHitBox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2
monitoring = false
script = ExtResource("4_ws4rs")

[node name="CollisionShape2D" type="CollisionShape2D" parent="JellyHitBox"]
light_mask = 32
visibility_layer = 4
position = Vector2(0, 7)
rotation = 0.00699461
scale = Vector2(0.5, 0.5)
shape = SubResource("CapsuleShape2D_c1aht")

[node name="HitBoxTimer" type="Timer" parent="JellyHitBox"]
wait_time = 0.5
one_shot = true

[node name="HealthBar" type="ProgressBar" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -10.0
offset_right = 20.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 10
theme_override_styles/background = SubResource("StyleBoxFlat_1fo3y")
theme_override_styles/fill = SubResource("StyleBoxFlat_21cx0")
max_value = 200.0
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="HideHealthBarTimer" type="Timer" parent="HealthBar"]
wait_time = 3.0
one_shot = true

[connection signal="area_entered" from="JellyHurtBox" to="." method="_on_hurt_box_area_entered"]
[connection signal="timeout" from="JellyHitBox/HitBoxTimer" to="JellyHitBox" method="_on_hit_box_timer_timeout"]
[connection signal="timeout" from="HealthBar/HideHealthBarTimer" to="." method="_on_hide_health_bar_timer_timeout"]

[editable path="SoftCollision"]
